--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.7.5",
 		"@eslint/js": "^9.29.0",
+		"@types/node": "^24.0.7",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react-swc": "^3.10.2",
@@ -29,7 +30,7 @@
 		"globals": "^16.2.0",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.34.1",
-		"vite": "^7.0.0",
+		"vite": "^6.1.0",
 		"wrangler": "^4.22.0"
 	},
 	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
